# BalloonLib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  test.yml
balloonlib/: __init__.py  balloonmodellib.py  balloonpinnlib.py  data.py  layers.py  metrics.py  model.py  normaltimeballoonpin.py  physics.py  plotting.py  rwf_layers.py  training.py  utils.py
docs/: conf.py  factorized_weights.md  index.rst  installation.rst  quickstart.rst
docs/api/: balloonmodellib.rst  balloonpinnlib.rst  data.rst  layers.rst  metrics.rst  model.rst  physics.rst  plotting.rst  rwf_layers.rst  training.rst  utils.rst
examples/: BalloonExample.ipynb  QuickStart.ipynb  demo_factorized_linear.py
scripts/: optimising_w_optuna.py
tests/: conftest.py  test_model.py  test_utils.py
