[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balloonlib"
version = "0.1.0"
description = "HRF reconstruction via the Balloon Model using Physics-Informed Neural Networks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rodrigo H. Avaria", email = "rodrigo.avaria@uv.cl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.5",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
notebook = [
    "ipykernel>=6.20",
    "ipywidgets>=8.0",
    "torchinfo>=1.7",
    "neurodiffeq>=0.6",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/errehache/BalloonLib"
Documentation = "https://balloonlib.readthedocs.io"
Issues = "https://github.com/errehache/BalloonLib/issues"

[tool.setuptools.packages.find]
include = ["balloonlib*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
